# thermalcomfort

./: CONVERSION_PLAN.md  Cargo.toml  LICENSE  Makefile  PROGRESS_SUMMARY.md  README.md  REMAINING_FUNCTIONS.md  SESSION_2_SUMMARY.md  SESSION_SUMMARY_CONTINUED.md  TESTING.md
.github/workflows/: ci.yml
examples/: adaptive_comfort.rs  basic_pmv.rs  outdoor_comfort.rs  stress_indices.rs  typed_api.rs
src/: constants.rs  lib.rs  numerical.rs  psychrometrics.rs  types.rs  utilities.rs
src/models/: adaptive.rs  cooling_effect.rs  heat_index_lu.rs  mod.rs  pet.rs  phs.rs  pmv.rs  pmv_typed.rs  ridge_regression.rs  set_tmp.rs  solar_gain.rs  specialty.rs  sports_heat_stress_risk.rs  thermal_indices.rs  two_nodes_gagge.rs  use_fans_heatwaves.rs  utci.rs  wbgt.rs  work_capacity.rs
tests/: python_comparison.rs
